Completed Partial RAG (Not integrated with other member's code)
-populate_database.py - Retrieves text from PowerPay Documentation PDF, splits it up and saves it to Chroma database
-get_embedding_function.py - Defines embedding model used for turning text into vector embeddings
-query_data.py - takes questions from user and passes it to gemini api for a response

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 pypdf
 langchain
 langchain-community
-chromadb # Vector storage
 supabase
 python-dotenv
 pytest
 boto3
-torch
 transformers
 huggingface-hub
 langchain-huggingface
 sentence-transformers
+google-genai
+
+
+#optional
+#langchain-core
+
