--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ huggingface-hub
 langchain-huggingface
 sentence-transformers
 google-genai
+fastapi
+uvicorn
+pydantic
+open-webui
 
 
 #optional
